--- a/.github/workflows/backend-tests.yaml
+++ b/.github/workflows/backend-tests.yaml
@@ -10,6 +10,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: showtime-squad_backend
+
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 17
