--- a/showtime-squad_frontend/package.json
+++ b/showtime-squad_frontend/package.json
@@ -16,6 +16,7 @@
     "@vitejs/plugin-react-swc": "^3.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.19.0",
     "vitest": "^0.34.6"
   },
   "devDependencies": {
