--- a/.github/workflows/backend-tests.yaml
+++ b/.github/workflows/backend-tests.yaml
@@ -38,18 +38,5 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: |
-        mvn -B package \
-        -DTMDB_API_KEY=$TMDB_API_KEY \
-        -Dspring.datasource.url=$SPRING_DATASOURCE_URL \
-        -Dspring.datasource.username=$SPRING_DATASOURCE_USERNAME \
-        -Dspring.datasource.password=$SPRING_DATASOURCE_PASSWORD \
-        -Dspring.jpa.hibernate.ddl-auto=$SPRING_JPA_HIBERNATE_DDL_AUTO \
-        -Dspring.jpa.properties.hibernate.dialect=$SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT \
-        -Dspring.datasource.driver-class-name=$SPRING_DATASOURCE_DRIVER_CLASS_NAME \
-        -Dshowtimesquad.app.jwtCookieName=$JWT_NAME \
-        -Dshowtimesquad.app.jwtSecret=$JWT_SECRET \
-        -Dshowtimesquad.app.jwtExpirationMs=$JWT_EXPIRATION_MS \
-        -DFRONTEND_URL=$CORS_FRONTEND_URL \
-        --file pom.xml
+      run: mvn -B package -DTMDB_API_KEY=$TMDB_API_KEY -Dspring.datasource.url=$SPRING_DATASOURCE_URL -Dspring.datasource.username=$SPRING_DATASOURCE_USERNAME -Dspring.datasource.password=$SPRING_DATASOURCE_PASSWORD -Dspring.jpa.hibernate.ddl-auto=$SPRING_JPA_HIBERNATE_DDL_AUTO -Dspring.jpa.properties.hibernate.dialect=$SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT -Dspring.datasource.driver-class-name=$SPRING_DATASOURCE_DRIVER_CLASS_NAME -Dshowtimesquad.app.jwtCookieName=$JWT_NAME -Dshowtimesquad.app.jwtSecret=$JWT_SECRET -Dshowtimesquad.app.jwtExpirationMs=$JWT_EXPIRATION_MS -DFRONTEND_URL=$CORS_FRONTEND_URL --file pom.xml
 
