--- a/.github/workflows/backend-tests.yaml
+++ b/.github/workflows/backend-tests.yaml
@@ -12,18 +12,18 @@ jobs:
     env:
       TMDB_API_KEY: ${{ secrets.TMDB_API_KEY }}
 
-      spring.datasource.url: ${{ secrets.JDBC_URL }}
-      spring.datasource.username: ${{ secrets.DB_USERNAME }}
-      spring.datasource.password: ${{ secrets.DB_PASSWORD }}
-      spring.jpa.hibernate.ddl-auto: ${{ vars.SPRING_JPA_HIBERNATE_DDL_AUTO }}
-      spring.jpa.properties.hibernate.dialect: ${{ vars.SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT }}
-      spring.datasource.driver-class-name: ${{ vars.SPRING_DATASOURCE_DRIVER_CLASS_NAME }}
+      SPRING_DATASOURCE_URL: ${{ secrets.JDBC_URL }}
+      SPRING_DATASOURCE_USERNAME: ${{ secrets.DB_USERNAME }}
+      SPRING_DATASOURCE_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      SPRING_JPA_HIBERNATE_DDL_AUTO: ${{ vars.SPRING_JPA_HIBERNATE_DDL_AUTO }}
+      SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: ${{ vars.SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT }}
+      SPRING_DATASOURCE_DRIVER_CLASS_NAME: ${{ vars.SPRING_DATASOURCE_DRIVER_CLASS_NAME }}
 
-      showtimesquad.app.jwtCookieName: ${{ vars.JWT_NAME }}
-      showtimesquad.app.jwtSecret: ${{ secrets.JWT_SECRET }}
-      showtimesquad.app.jwtExpirationMs: ${{ vars.JWT_EXPIRATION_MS }}
+      JWT_NAME: ${{ vars.JWT_NAME }}
+      JWT_SECRET: ${{ secrets.JWT_SECRET }}
+      JWT_EXPIRATION_MS: ${{ vars.JWT_EXPIRATION_MS }}
 
-      FRONTEND_URL: ${{ vars.CORS_FRONTEND_URL }}
+      CORS_FRONTEND_URL: ${{ vars.CORS_FRONTEND_URL }}
 
     defaults:
       run:
@@ -37,6 +37,21 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+        
+    - name: Create application.properties
+      run: |
+        echo "tmdb.api.key=${TMDB_API_KEY}" > src/main/resources/application.properties
+        echo "spring.datasource.url=${SPRING_DATASOURCE_URL}" >> src/main/resources/application.properties
+        echo "spring.datasource.username=${SPRING_DATASOURCE_USERNAME}" >> src/main/resources/application.properties
+        echo "spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}" >> src/main/resources/application.properties
+        echo "spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}" >> src/main/resources/application.properties
+        echo "spring.jpa.properties.hibernate.dialect=${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT}" >> src/main/resources/application.properties
+        echo "spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME}" >> src/main/resources/application.properties
+        echo "showtimesquad.app.jwtCookieName=${JWT_NAME}" >> src/main/resources/application.properties
+        echo "showtimesquad.app.jwtSecret=${JWT_SECRET}" >> src/main/resources/application.properties
+        echo "showtimesquad.app.jwtExpirationMs=${JWT_EXPIRATION_MS}" >> src/main/resources/application.properties
+        echo "frontend.url=${CORS_FRONTEND_URL}" >> src/main/resources/application.properties
+
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
