--- a/showtime-squad_frontend/package.json
+++ b/showtime-squad_frontend/package.json
@@ -11,6 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@preact/signals-react": "^1.3.7",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.0",
     "@vitejs/plugin-react-swc": "^3.4.1",
