--- a/.github/workflows/backend-tests.yaml
+++ b/.github/workflows/backend-tests.yaml
@@ -1,4 +1,4 @@
-name: Java CI with Maven
+name: Spring Boot Build & Unit Tests
 
 on:
   push:
@@ -54,4 +54,6 @@ jobs:
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-
+    
+    - name: Run Tests
+      run: mvn test
