--- a/showtime-squad_frontend/package.json
+++ b/showtime-squad_frontend/package.json
@@ -17,8 +17,7 @@
     "@vitejs/plugin-react-swc": "^3.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.19.0",
-    "vitest": "^0.34.6"
+    "react-router-dom": "^6.19.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -30,6 +29,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "jsdom": "^22.1.0",
     "sass": "^1.69.5",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vitest": "^0.34.6"
   }
 }
