--- a/showtime-squad_backend/pom.xml
+++ b/showtime-squad_backend/pom.xml
@@ -93,6 +93,12 @@
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
+    
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <version>5.1.9.RELEASE</version>
+      </dependency>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
