--- a/showtime-squad_backend/Dockerfile
+++ b/showtime-squad_backend/Dockerfile
@@ -25,4 +25,4 @@ WORKDIR /app
 COPY --from=build /app/target/showtimesquad-0.0.1-SNAPSHOT.jar ./
 
 # Set the command to run the application with environment variables
-CMD ["sh", "-c", "java -Dtmdb.api.key=$TMDB_API_KEY -Dprofile.pictures=$PROFILE_PICTURES -Dspring.datasource.url=$SPRING_DATASOURCE_URL -Dspring.datasource.username=$SPRING_DATASOURCE_USERNAME -Dspring.datasource.password=$SPRING_DATASOURCE_PASSWORD -Dspring.jpa.hibernate.ddl-auto=$SPRING_JPA_HIBERNATE_DDL_AUTO -Dspring.jpa.properties.hibernate.dialect=$SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT -Dspring.datasource.driver-class-name=$SPRING_DATASOURCE_DRIVER_CLASS_NAME -Dshowtimesquad.app.jwtCookieName=$SHOWTIMESQUAD_APP_JWTCOOKIENAME -Dshowtimesquad.app.jwtSecret=$SHOWTIMESQUAD_APP_JWTSECRET -Dshowtimesquad.app.jwtExpirationMs=$SHOWTIMESQUAD_APP_JWTEXPIRATIONMS -DfrontEndUrl=$FRONTEND_URL -jar showtimesquad-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT [ "java", "-jar", "/app.jar" ]
